🌈fixed links and added wrapping to long URLs in the footnote list

--- a/src/more/archive/blog/25/post.css
+++ b/src/more/archive/blog/25/post.css
@@ -225,6 +225,10 @@ img {max-width: 100%;}
 	background-color: #fffcfa;
 	padding: 3px;
 }
+.footnotes-list a {
+	overflow-wrap: break-word;
+	word-wrap: break-word;
+}
 
 @media (prefers-color-scheme: dark) {
 	.content-area.default {
